add dockerfile and modeified main

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-database="host=localhost user=postgres password=mypassword dbname=mini_olshop port=5432 sslmode=disable TimeZone=Asia/Jakarta"
-app_port=8212
+database="host=floppy.db.elephantsql.com user=zxxjsjel password=pOxb7PF2xW70yhaoPjvvjcerdT-w0VAp dbname=zxxjsjel port=5432 sslmode=disable TimeZone=Asia/Jakarta"
+app_port=8080
+app_host=0.0.0.0
